--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
 				<li><a href="#team">Команда</a></li>
 				<li><a href="#contact">Контакты</a></li>
 			</ul>
-			<a class="res-nav_click" href="#"><i class="fa fa-bars"></i></a>
+			<a class="res-nav_click" href="#"><i class="fa fa-bars"></i>   </a>
+             <a class="res-nav_click" href="#"><i class="fa fa-vk"></i>
+            </a>
 		</div>
 	</nav>
 	<!--main-nav-end-->
@@ -180,6 +182,7 @@
 		<div class="container">
 			<ul>
 				<li><a href="#"><img src="img/c-liogo5.png" alt=""></a></li>
+                <li><a href="#"><img src="img/c-liogo6.png" alt=""></a></li> 
 			</ul>
 		</div>
 	</div>
