--- a/index.html
+++ b/index.html
@@ -168,21 +168,22 @@
 				</div>
 			</div>
 			<ul class="client wow fadeIn delay-05s">
-				<li><a href="#">
+				<li><a href="https://vk.com/polski_pilot">
             	<img src="img/client-pic1.jpg" alt="">
                 <h3>Станислав Пилецкий</h3>
                 <span>First oficcer.</span>
             </a></li>
 			</ul>
 		</div>
+
 	</section>
 	<!--main-section client-part-end-->
 	<div class="c-logo-part">
 		<!--c-logo-part-start-->
 		<div class="container">
 			<ul>
-				<li><a href="#"><img src="img/c-liogo5.png" alt=""></a></li>
-                <li><a href="#"><img src="img/c-liogo6.png" alt=""></a></li> 
+				<li><a href="https://twitter.com/1MZRM9DOSk79sl4?s=09"><img src="img/c-liogo5.png" alt=""></a></li>
+                <li><a href="https://twitter.com/1MZRM9DOSk79sl4?s=09"><img src="img/c-liogo6.png" alt=""></a></li>
 			</ul>
 		</div>
 	</div>
@@ -206,8 +207,20 @@
 					<h3 class="wow fadeInDown delay-06s">Станислав Пилецкий</h3>
 					<span class="wow fadeInDown delay-06s">Owner</span>
 					<p class="wow fadeInDown delay-06s">Делаем все качественно, и быстро!</p>
-				</div>
+    				</div>
 
+                    <div class="team-leader-box">
+					<div class="team-leader wow fadeInDown delay-03s">
+						<div class="team-leader-shadow"><a href="https://vk.com/gromzar"></a></div>
+						<img src="img/team-leader-pic1.jpg" alt="">
+						<ul>
+							<li><a href="https://vk.com/gromzar" class="fa fa-vk"></a></li>
+						</ul>
+					</div>
+					<h3 class="wow fadeInDown delay-03s">Дмитрий Ивкович</h3>
+					<span class="wow fadeInDown delay-03s">Редактор Web-Page</span>
+					<p class="wow fadeInDown delay-03s">Разрабатываю Web-макеты в Adobe Photoshop.</p>
+				</div>
 			</div>
 		</div>
 	</section>
